# orbit-screensaver-android

./: README.md  local.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/full/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  orbit_jni.cpp
app/src/main/kotlin/com/malikhw/orbit/: AdIds.kt
app/src/main/kotlin/com/malikhw/orbit/ads/: AdIds.kt
app/src/main/kotlin/com/malikhw/orbit/dream/: OrbitDreamService.kt  OrbitRenderer.kt
app/src/main/kotlin/com/malikhw/orbit/settings/: OrbitPrefs.kt  SettingsActivity.kt
app/src/main/kotlin/com/malikhw/orbit/update/: UpdateChecker.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: dream_info.xml  file_paths.xml
app/src/playstore/: AndroidManifest.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
